make text readable and fix author header

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,4 +1,5 @@
 @import '../fonts/lato/lato.css';
+
 /* ==========================================================================
    Table of Contents
    ========================================================================== */
@@ -115,6 +116,13 @@ td, th{ padding: 0; }
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Titillium Web';
+    font-style: normal;
+    font-weight: 300;
+    src: url(../fonts/titillium/Light.woff2) format('woff2'), url(../fonts/titillium/Light.woff) format('woff'), url(../fonts/titillium/Light.ttf) format('ttf');
+}
+
 /* Apply these base styles to all icons */
 [class^="icon-"]:before, [class*=" icon-"]:before {
     font-family: "casper-icons", "Open Sans", sans-serif;
@@ -188,7 +196,7 @@ body {
     letter-spacing: 0.01rem;
     font-size: 1.8rem;
     line-height: 1.75em;
-    color: #c0c0c0;
+    color: #333;
     -webkit-font-feature-settings: 'kern' 1;
     -moz-font-feature-settings: 'kern' 1;
     -o-font-feature-settings: 'kern' 1;
